Хэш => хеш, согласно словарю криптографических терминов

--- a/appendix/questions-4.tex
+++ b/appendix/questions-4.tex
@@ -19,7 +19,7 @@
     \item Терморектальный криптоанализ. Формулировка основной теоремы, идея доказательства. Свойства, примеры использования.
     \item Современные потоковые шифры на примере A5/1. Общий вид, требования, характеристики и анализ защищённости.
     \item Современные потоковые шифры на примере RC4. Общий вид, требования, характеристики и анализ защищённости.
-    \item Задача о словаре и хэш-функции. Коллизии в хеш-фунциях. Криптографически стойкие хеш-функции. Свойства, принципы построения криптографически стойких хэш-функций (стандарта США или ГОСТ Р 34.11-2012 <<СТРИБОГ>>). Структуры Меркла~---~Дамгарда, Миагучи~---~Пренеля. Использование хеш-функций в криптографии.
+    \item Задача о словаре и хеш-функции. Коллизии в хеш-фунциях. Криптографически стойкие хеш-функции. Свойства, принципы построения криптографически стойких хеш-функций (стандарта США или ГОСТ Р 34.11-2012 <<СТРИБОГ>>). Структуры Меркла~---~Дамгарда, Миагучи~---~Пренеля. Использование хеш-функций в криптографии.
     \item База данных на основе Echo-сети. Blockchain. Доказательство работы (proof-of-work, proof-of-share). BitCoin.
     \item Односторонние функции с потайной дверцей. Пример, не связанный с задачами из области теории чисел (т.е. не факторизация, не дискретный логарифм, etc.) Возможность использования односторонних функций в криптографии. Общие идеи использования криптографии с открытым ключом для шифрования. Проблемы криптографической стойкости, производительности.
     \item Цифровые подписи. Цели, основные принципы получения и использования. Конкретные примеры использования цифровых подписей в современных информационных системах.
