--- a/hash-functions/GOST_R_34.11-94.tex
+++ b/hash-functions/GOST_R_34.11-94.tex
@@ -1,7 +1,7 @@
-\section{ГОСТ Р 34.11-94}\index{хэш-функция!ГОСТ Р 34.11-94|(}
+\section{ГОСТ Р 34.11-94}\index{хеш-функция!ГОСТ Р 34.11-94|(}
 \selectlanguage{russian}
 
-Представим описание устаревшего российского стандарта хэш-функции ГОСТ Р 34.11-94~\cite{GOST-94}.
+Представим описание устаревшего российского стандарта хеш-функции ГОСТ Р 34.11-94~\cite{GOST-94}.
 
 Пусть $X$ -- последовательность длины 256 бит. Запишем $X$ тремя способами в виде конкатенации 4, 16 и 32 блоков:
 \[ \begin{array}{ll}
@@ -32,7 +32,7 @@
 \end{array} \]
 Приведём пример. Пусть $s = 7$, тогда $i=2$, $k=2$. Находим перестановку $\varphi(7) = 8 \cdot 2 + 2 = 18$. Седьмой байт переместился на 18-е место.
 
-В российском стандарте функция компрессии двух 256-битовых блоков сообщения $M$ и результата хэширования предыдущего блока $H$ имеет вид
+В российском стандарте функция компрессии двух 256-битовых блоков сообщения $M$ и результата хеширования предыдущего блока $H$ имеет вид
 \[
     H' = \chi(M, H) = \psi^{61}(H \oplus \psi(M \oplus \psi^{12}(S))),
 \]
@@ -61,5 +61,5 @@
     K_i = P(U_i \oplus V_i), ~ i = 1,2,3,4.
 \]
 
-%Ключевая хэш-функция определяется в виде $h_{K} (X)=h(KXK)$, где $h(X)$ -- некоторая стандартная хэш-функция, $K$ -- секретный ключ.
-\index{хэш-функция!ГОСТ Р 34.11-94|)}
+%Ключевая хеш-функция определяется в виде $h_{K} (X)=h(KXK)$, где $h(X)$ -- некоторая стандартная хеш-функция, $K$ -- секретный ключ.
+\index{хеш-функция!ГОСТ Р 34.11-94|)}
