--- a/hash-functions/mac/one-time-mac.tex
+++ b/hash-functions/mac/one-time-mac.tex
@@ -9,7 +9,7 @@ h(m) = a \times m + b \bmod p.
 
 Если $p$ -- простое, то вероятность угадать значение MAC для некоторого сообщения $m_2$ (то есть подменить сообщение $m_1$ с одновременной генерацией нового MAC) без знания ключа $k=\overrightarrow{(a,b)}$, равна строго $1/p$.
 
-Можно воспользоваться описанной ранее функцией хэширования для сообщений переменной длины и использовать чуть более сложную формулу для вычисления MAC:
+Можно воспользоваться описанной ранее функцией хеширования для сообщений переменной длины и использовать чуть более сложную формулу для вычисления MAC:
 
 \[ \begin{array}{l}
 \vec{m} = \left \langle m_1, m_2, \dots, m_l \right \rangle, \\
