--- a/public-key/EdDSA.tex
+++ b/public-key/EdDSA.tex
@@ -7,12 +7,12 @@
 	\item конечное поле $\F_{p}$, где $p$ -- большое простое число;
 	\item группа точек эллиптической кривой в скрученной форме Эдвардса $E$ над полем $\F_{p}$ порядка $Ord(E) = 2^c l$, где $l$ -- большое простое число, $c$ -- целое;
 	\item точка, генератор $G$ циклической подгруппы порядка $l$;
-	\item криптографическая хэш-функция $H$, имеющая выход $2b$ бит, $b > 1 + log_2 p$, чтобы элементы поля $\F_{p}$ и координаты точек $E$ могли быть представлены в виде $b$-битовых строк.
+	\item криптографическая хеш-функция $H$, имеющая выход $2b$ бит, $b > 1 + log_2 p$, чтобы элементы поля $\F_{p}$ и координаты точек $E$ могли быть представлены в виде $b$-битовых строк.
 \end{itemize}
 
 Параметр $l$ должен быть достаточно большим, чтобы $\rho$-метод Полларда для дискретного логарифмирования требовал большого количества операций для вычисления <<логарифма>> -- не менее $\sqrt{l \pi / 4}$ сложений точек в группе. Рекомендуется, чтобы значение $l$ превышало $2^{200}$ -- для получения не менее $\approx 2^{99{,}8}$ сложений точек в $\rho$-методе Полларда.
 
-В качестве закрытого ключа каждый участник выбирает некоторую $b$-битовую строку $k$. Данная строка хэшируется выбранной криптографической хэш-функцией $H$, после чего последние $b$-бит трактуются как целое число в кодировке \foreignlanguage{english}{\textit{little endian}} $s$ и формируется открытый ключ $A \in E$:
+В качестве закрытого ключа каждый участник выбирает некоторую $b$-битовую строку $k$. Данная строка хешируется выбранной криптографической хеш-функцией $H$, после чего последние $b$-бит трактуются как целое число в кодировке \foreignlanguage{english}{\textit{little endian}} $s$ и формируется открытый ключ $A \in E$:
 
 \[ \begin{array}{l}
 	s = H_{0, \dots, b-1}(k),\\
@@ -51,7 +51,7 @@ Ed25519 задаёт конкретные параметры схемы EdDSA с
 \]
 	\item базовая точка $G$ имеет координату $y = 4/5 \bmod q$, координата $x$ -- положительная;
 	\item порядок базовой точки $G$ является большим простым числом и равен $l = 2^{252} + 27742317777372353535851937790883648493$;
-	\item криптографическая хэш-функция SHA-256\index{хэш-функция!SHA-256} ($b = 256$).
+	\item криптографическая хеш-функция SHA-256\index{хеш-функция!SHA-256} ($b = 256$).
 \end{itemize}
 
 Выбранная группа точек бирационально эквивалентна группе точек над эллиптической кривой в форме Монтгомери Curve25519 (\cite{Bernstein:2006}). Выбранная базовая точка также соответствует базовой точке, предложенной для Curve25519. Так как сложения в скрученной форме Эдвардса выполняются быстрее, чем в форме Вейерштрасса и в форме Монтгомери, группу Ed25519 можно использовать для ускорения вычислений в тех случаях, когда в качестве параметров выбрана группа точек кривой Curve25519.
