--- a/public-key/rsa.tex
+++ b/public-key/rsa.tex
@@ -109,13 +109,13 @@
 \end{enumerate}
 Недостаток данной системы создания ЭП состоит в том, что подпись $m^{d} \mod n$ имеет большую длину, равную длине открытого сообщения $m$.
 
-Для уменьшения длины подписи применяется другой вариант процедуры: вместо сообщения $m$ отправитель подписывает $h(m)$, где $h(x)$ -- известная криптографическая хэш-функция. Модифицированная процедура состоит в следующем.
+Для уменьшения длины подписи применяется другой вариант процедуры: вместо сообщения $m$ отправитель подписывает $h(m)$, где $h(x)$ -- известная криптографическая хеш-функция. Модифицированная процедура состоит в следующем.
 
 \begin{enumerate}
     \item $A$ посылает $B$ сообщение в виде $(m, s)$, где $m$ -- открытый текст,
         \[ s = h(m)^d \mod n \]
         -- подпись.
-    \item $B$ принимает сообщение $(m, s)$, вычисляет хэш $h(m)$ и возводит подпись в степень:
+    \item $B$ принимает сообщение $(m, s)$, вычисляет хеш $h(m)$ и возводит подпись в степень:
         \[ h_1 = s^e \mod n. \]
     \item $B$ сравнивает значения $h(m)$ и $h_1$. При равенстве
         \[ h(m) = h_1 \]
@@ -138,13 +138,13 @@
         \end{enumerate}
     \item Подписание.
         \begin{enumerate}
-            \item Пусть хэш сообщения $h(m) = 12 \in [1, n-1]$.
+            \item Пусть хеш сообщения $h(m) = 12 \in [1, n-1]$.
             \item Вычислим ЭП:
                 \[ s = h^d = 12^{169} = 90 \mod 221. \]
         \end{enumerate}
     \item Проверка подписи.
         \begin{enumerate}
-            \item Пусть хэш полученного сообщения $h(m) = 12$, полученная подпись $s = 90$.
+            \item Пусть хеш полученного сообщения $h(m) = 12$, полученная подпись $s = 90$.
             \item Выполним проверку:
                 \[ h_1 = s^e = 90^{25} = 12 \mod 221, ~~ h_1 = h. \]
                 Подпись верна.
@@ -164,7 +164,7 @@
     \item Выбирается случайное $r$.
     \item Для открытого текста $m$ вычисляется
         \[ x = m \oplus H_1(r), ~ y = r \oplus H_2(x), \]
-        где $H_1$ и $H_2$ -- криптографические хэш-функции.
+        где $H_1$ и $H_2$ -- криптографические хеш-функции.
     \item Сообщение $M = x ~\|~ y$ далее шифруется RSA.
 \end{enumerate}
 
@@ -174,7 +174,7 @@
 В модификации OAEP+ $x$ вычисляется как
     \[ x = \left( m \oplus H_1 \left( r \right) \right) \Vert \left. H_3 \left( m \Vert r \right) \right. .\]
 
-В описанной выше схеме ЭП под $m$ понимается хэш открытого текста, вместо шифрования выполняется подписание, вместо расшифрования -- проверка подписи.
+В описанной выше схеме ЭП под $m$ понимается хеш открытого текста, вместо шифрования выполняется подписание, вместо расшифрования -- проверка подписи.
 
 
 \subsection{Выбор параметров и оптимизация}
