--- a/secure-systems-examples/pgp.tex
+++ b/secure-systems-examples/pgp.tex
@@ -24,7 +24,7 @@
     \item $SK_A$ -- закрытый ключ ЭП отправителя;
     \item $ID_{SKa}$ -- идентификатор ключа ЭП отправителя, по которому получатель определяет, какой ключ из связки открытых ключей использовать для проверки подписи;
     \item $m$ -- сообщение (файл) для передачи;
-    \item $h(m)$ -- криптографическая хэш-функция;
+    \item $h(m)$ -- криптографическая хеш-функция;
     \item $E_{SKa}$ -- схема ЭП на секретном ключе $SK_A$;
     \item $\|$ -- конкатенация битовых строк;
     \item $Z$ -- сжатие сообщения алгоритмом компрессии;
