--- a/user-authentication/index.tex
+++ b/user-authentication/index.tex
@@ -227,13 +227,13 @@ NIST (Национальный институт стандартов и техн
 
 \subsubsection{Атака для подбора паролей и ключей шифрования}
 
-В схемах аутентификации по паролю иногда используется хэширование и хранение хэша пароля на сервере. В таких случаях применима словарная атака или атака с применением заранее вычисленных таблиц для ускорения поиска.
+В схемах аутентификации по паролю иногда используется хеширование и хранение хеша пароля на сервере. В таких случаях применима словарная атака или атака с применением заранее вычисленных таблиц для ускорения поиска.
 
-Для нахождения пароля, прообраза хэш-функции, или для нахождения ключа блочного шифрования по атаке с выбранным шифртекстом (для одного и того же известного открытого текста и соответствующего шифртекста) может быть применён метод перебора с балансом между памятью и временем вычислений. Самый быстрый метод радужных таблиц\index{радужные таблицы} (\langen{rainbow tables}, 2003~г., \cite{Oechslin:2003}) заранее вычисляет следующие цепочки и хранит результат в памяти.
+Для нахождения пароля, прообраза хеш-функции, или для нахождения ключа блочного шифрования по атаке с выбранным шифртекстом (для одного и того же известного открытого текста и соответствующего шифртекста) может быть применён метод перебора с балансом между памятью и временем вычислений. Самый быстрый метод радужных таблиц\index{радужные таблицы} (\langen{rainbow tables}, 2003~г., \cite{Oechslin:2003}) заранее вычисляет следующие цепочки и хранит результат в памяти.
 
-Для нахождения пароля, прообраза хэш-функции $H$, цепочка строится как
+Для нахождения пароля, прообраза хеш-функции $H$, цепочка строится как
     \[ M_0 \xrightarrow{H(M_0)} h_0 \xrightarrow{R_0(h_0)} M_1 \ldots M_t \xrightarrow{H(M_t)} h_t \xrightarrow{R_t(h_t)} M_{t+1}, \]
-где $R_i(h)$ -- функция редуцирования, преобразования хэша в пароль для следующего хэширования.
+где $R_i(h)$ -- функция редуцирования, преобразования хеша в пароль для следующего хеширования.
 
 Для нахождения ключа блочного шифрования для одного и того же известного открытого текста $M$ таблица строится как
     \[ K_0 \xrightarrow{E_{K_0}(M)} c_0 \xrightarrow{R_0(c_0)} K_1 \ldots K_t \xrightarrow{E_{K_t}(M)} c_t \xrightarrow{R_t(c_t)} K_{t+1}, \]
@@ -241,7 +241,7 @@ NIST (Национальный институт стандартов и техн
 
 Функция редуцирования $R_i$ зависит от номера итерации, чтобы избежать дублирующихся подцепочек, которые возникают в случае коллизий между значениями в разных цепочках в разных итерациях, если $R$ постоянна. Радужная таблица размера $(m \times 2)$ состоит из строк $(M_{0,j}, M_{t+1,j})$ или $(K_{0,j}, K_{t+1,j})$, вычисленных для разных значений стартовых паролей $M_{0,j}$ или $K_{0,j}$ соответственно.
 
-Опишем атаку на примере нахождения прообраза $\overline{M}$ хэша $\overline{h} = H(\overline{M})$. На первой итерации исходный хэш $\overline{h}$ редуцируется в сообщение $\overline{h} \xrightarrow{R_t(\overline{h})} \overline{M}_{t+1} $ и сравнивается со всеми значениями последнего столбца $M_{t+1,j}$ таблицы. Если нет совпадения, переходим ко второй итерации. Хэш $\overline{h}$ дважды редуцируется в сообщение $\overline{h} \xrightarrow{R_{t-1}(\overline{h})} \overline{M}_t \xrightarrow{H(\overline{M}_t)} \overline{h}_t \xrightarrow{R_t(\overline{h}_t)} \overline{M}_{t+1}$ и сравнивается со всеми значениями последнего столбца $M_{t+1,j}$ таблицы. Если не совпало, то переходим к третьей итерации и~т.\,д. Если для $r$-кратного редуцирования сообщение $\overline{M}_{t+1}$ содержится в таблице во втором столбце, то из совпавшей строки берётся $M_{0,j}$, и вся цепочка пробегается заново для поиска искомого сообщения $\overline{M}: ~ \overline{h} = H(\overline{M})$.
+Опишем атаку на примере нахождения прообраза $\overline{M}$ хеша $\overline{h} = H(\overline{M})$. На первой итерации исходный хеш $\overline{h}$ редуцируется в сообщение $\overline{h} \xrightarrow{R_t(\overline{h})} \overline{M}_{t+1} $ и сравнивается со всеми значениями последнего столбца $M_{t+1,j}$ таблицы. Если нет совпадения, переходим ко второй итерации. Хеш $\overline{h}$ дважды редуцируется в сообщение $\overline{h} \xrightarrow{R_{t-1}(\overline{h})} \overline{M}_t \xrightarrow{H(\overline{M}_t)} \overline{h}_t \xrightarrow{R_t(\overline{h}_t)} \overline{M}_{t+1}$ и сравнивается со всеми значениями последнего столбца $M_{t+1,j}$ таблицы. Если не совпало, то переходим к третьей итерации и~т.\,д. Если для $r$-кратного редуцирования сообщение $\overline{M}_{t+1}$ содержится в таблице во втором столбце, то из совпавшей строки берётся $M_{0,j}$, и вся цепочка пробегается заново для поиска искомого сообщения $\overline{M}: ~ \overline{h} = H(\overline{M})$.
 
 Найдём вероятность нахождения пароля в таблице. Пусть мощность множества всех паролей равна $N$. Изначально в столбце $M_{0,j}$ содержится $m_0 = m$ различных паролей. Предполагая наличие случайного отображения с пересечениями паролей $M_{0,j} \rightarrow M_{1,j}$, в $M_{1,j}$ будет $m_1$ различных паролей. Согласно задаче о размещении,
 \[
@@ -254,7 +254,7 @@ NIST (Национальный институт стандартов и техн
 
 Чем больше таблица из $m$ строк, тем больше шансов найти пароль или ключ, выполнив в наихудшем случае   $O \left( m \frac{t(t+1)}{2} \right)$ операций.
 
-Примеры применения атаки на хэш-функциях $\textrm{MD5}$\index{хэш-функция!MD5}, $\textrm{LM}$ (т.~е. $\textrm{DES}_{\textrm{Password}} (\textrm{const})$) приведены в таблице~\ref{tab:rainbow-tables}.
+Примеры применения атаки на хеш-функциях $\textrm{MD5}$\index{хеш-функция!MD5}, $\textrm{LM}$ (т.~е. $\textrm{DES}_{\textrm{Password}} (\textrm{const})$) приведены в таблице~\ref{tab:rainbow-tables}.
 
 \begin{table}[!ht]
     \centering
@@ -271,13 +271,13 @@ NIST (Национальный институт стандартов и техн
             {\footnotesize Объём} &
             \parbox{1.7cm}{\centering\footnotesize \medspace Время вычисления таблиц} & \parbox{1.1cm}{\centering\footnotesize Время поиска} \\ [2ex]
         \hline \hline
-        \multicolumn{7}{|c|}{\footnotesize Хэш LM} \\
+        \multicolumn{7}{|c|}{\footnotesize Хеш LM} \\
         \hline
         &  & A--Z & $2^{33}$ & 610 MB & \multirow{3}{*}{\parbox{1.7cm}{\centering несколько лет}} & 6 с \\
         $2 \times 56$ & 14 & A--Z, 0-9 & $2^{36}$ & 3 GB &  & 15 с \\
         & & все & $2^{43}$ & 64 GB &  & 7 мин \\
         \hline \hline
-        \multicolumn{7}{|c|}{\footnotesize Хэш MD5} \\
+        \multicolumn{7}{|c|}{\footnotesize Хеш MD5} \\
         \hline
         \rule{0pt}{2.5ex} 128 & 8 & A-Z, 0-9 & $2^{41}$ & 36 GiB & - & 4 мин \\
         \hline
