--- a/hash-functions/collisions_probability.tex
+++ b/hash-functions/collisions_probability.tex
@@ -1,14 +1,14 @@
 \subsection{Вероятность коллизии}
 \selectlanguage{russian}
 
-Если $k$-битовая криптографическая хэш-функция имеет равномерное распределение выходных хэш-значений по всем сообщениям, то, согласно парадоксу дней рождения\index{парадокс дней рождения} (см.~\autoref{section:birthday-paradox} в~приложении), среди
+Если $k$-битовая криптографическая хеш-функция имеет равномерное распределение выходных хеш-значений по всем сообщениям, то, согласно парадоксу дней рождения\index{парадокс дней рождения} (см.~\autoref{section:birthday-paradox} в~приложении), среди
     \[ n_{1/2} \approx \sqrt{2 \ln 2} \cdot 2^{k/2} \]
-случайных сообщений с вероятностью больше $1/2$ найдутся два сообщения с одинаковыми значениями хэш-функций, то есть произойдёт коллизия.
+случайных сообщений с вероятностью больше $1/2$ найдутся два сообщения с одинаковыми значениями хеш-функций, то есть произойдёт коллизия.
 
-Криптографические хэш-функции должны быть равномерными по выходу, насколько это можно проверить, чтобы быть устойчивыми к коллизиям. Следовательно, для нахождения коллизии нужно взять группу из примерно $2^{k/2}$ сообщений.
+Криптографические хеш-функции должны быть равномерными по выходу, насколько это можно проверить, чтобы быть устойчивыми к коллизиям. Следовательно, для нахождения коллизии нужно взять группу из примерно $2^{k/2}$ сообщений.
 
-Например, для нахождения коллизии в 96-битовой хэш-функ\-ции, которая, в частности, используется в имитовставке\index{имитовставка} $\MAC$ в протоколе IPsec\index{протокол!IPsec}, потребуется группа из $2^{48}$ сообщений, 3072 Тбайт памяти для хранения группы и время на $2^{48}$ операций хэширования, что достижимо.
+Например, для нахождения коллизии в 96-битовой хеш-функ\-ции, которая, в частности, используется в имитовставке\index{имитовставка} $\MAC$ в протоколе IPsec\index{протокол!IPsec}, потребуется группа из $2^{48}$ сообщений, 3072 Тбайт памяти для хранения группы и время на $2^{48}$ операций хеширования, что достижимо.
 
-Если значения хэш-функции имеют неравномерное распределение, то размер группы с коллизией меньше, чем $n_{1/2}$. Если для поиска коллизии достаточно взять группу с размером, много меньшим $n_{1/2}$, то хэш-функция не является устойчивой к коллизиям.
+Если значения хеш-функции имеют неравномерное распределение, то размер группы с коллизией меньше, чем $n_{1/2}$. Если для поиска коллизии достаточно взять группу с размером, много меньшим $n_{1/2}$, то хеш-функция не является устойчивой к коллизиям.
 
-Например, для 128-битовой функции MD5\index{коллизия}\index{хэш-функция!MD5} в 2005 году Ван Сяоюн и Ю Хунбо (пиньинь \textit{Wáng Xiǎo\-yún} и \textit{Yú Hóng\-bō}) представили атаку для нахождения коллизии за $2^{39} \ll 2^{64}$ операций~\cite{WangYu:2005}. Это означает, что MD5 взломана и более не может считаться надёжной криптографической хэш-функцией.
+Например, для 128-битовой функции MD5\index{коллизия}\index{хеш-функция!MD5} в 2005 году Ван Сяоюн и Ю Хунбо (пиньинь \textit{Wáng Xiǎo\-yún} и \textit{Yú Hóng\-bō}) представили атаку для нахождения коллизии за $2^{39} \ll 2^{64}$ операций~\cite{WangYu:2005}. Это означает, что MD5 взломана и более не может считаться надёжной криптографической хеш-функцией.
