--- a/hash-functions/hash-functions_combinations.tex
+++ b/hash-functions/hash-functions_combinations.tex
@@ -1,7 +1,7 @@
-\subsection{Комбинации хэш-функций}
+\subsection{Комбинации хеш-функций}
 \selectlanguage{russian}
 
-Для иллюстрации свойств устойчивости к коллизиям исследуем следующий пример комбинирования двух хэш-функций. Рассмотрим две хэш-функции $f$ и $g$. Известно, что одна из этих функций не противостоит коллизиям, но какая именно -- неизвестно. Тогда имеют место следующие утверждения:
+Для иллюстрации свойств устойчивости к коллизиям исследуем следующий пример комбинирования двух хеш-функций. Рассмотрим две хеш-функции $f$ и $g$. Известно, что одна из этих функций не противостоит коллизиям, но какая именно -- неизвестно. Тогда имеют место следующие утверждения:
 \begin{itemize}
     \item Функция $h(x) = f(g(x))$ не устойчива к коллизиям, если $g(x)$ имеет коллизии.
     \item Функция $h(x) = f(g(x)) ~\|~ g(f(x))$ не устойчива, например, если $g(x) = \textrm{const}$.
