--- a/hash-functions/mac/hmac.tex
+++ b/hash-functions/mac/hmac.tex
@@ -3,15 +3,15 @@
 
 Наиболее универсальный способ аутентификации сообщений с использованием схем ЭЦП на криптосистемах с открытым ключом состоит в том, что сторона $A$ отправляет стороне $B$ сообщение
     \[ m ~\|~ \textrm{ЭЦП}(K, h(m)), \]
-где $h(m)$ -- криптографическая хэш-функция в схеме ЭП и $\|$ является операцией конкатенации битовых строк. Для аутентификации большого объёма информации этот способ не подходит из-за медленной операции вычисления подписи. Например, вычисление одной ЭЦП на криптосистемах с открытым ключом занимает порядка 10 мс на ПК. При средней длине IP-пакета 1 Кбайт, для каждого из которых требуется вычислить имитовставку, получим максимальную пропускную способность в $\frac{1 ~ \text{Кбайт}}{10 ~ \text{мс}} = 100$ Кбайт/с.
+где $h(m)$ -- криптографическая хеш-функция в схеме ЭП и $\|$ является операцией конкатенации битовых строк. Для аутентификации большого объёма информации этот способ не подходит из-за медленной операции вычисления подписи. Например, вычисление одной ЭЦП на криптосистемах с открытым ключом занимает порядка 10 мс на ПК. При средней длине IP-пакета 1 Кбайт, для каждого из которых требуется вычислить имитовставку, получим максимальную пропускную способность в $\frac{1 ~ \text{Кбайт}}{10 ~ \text{мс}} = 100$ Кбайт/с.
 
-Поэтому для большого объёма данных, которые нужно аутентифицировать, $A$ и $B$ создают общий секретный ключ аутентификации $K$. Далее имитовставка вычисляется либо с помощью модификации блочного шифра, либо с помощью криптографической хэш-функции.
+Поэтому для большого объёма данных, которые нужно аутентифицировать, $A$ и $B$ создают общий секретный ключ аутентификации $K$. Далее имитовставка вычисляется либо с помощью модификации блочного шифра, либо с помощью криптографической хеш-функции.
 
 Для каждого пакета информации $m$ отправитель $A$ вычисляет $\MAC(K,m)$ и присоединяет его к сообщению $m$:
     \[ m ~ \|~ \MAC(K,m). \]
 Зная секретный ключ $K$, получатель $B$ может удостовериться с помощью кода аутентификации, что информация не была изменена или фальсифицирована, а была создана отправителем.
 
-Требования к длине кода аутентификации в общем случае такие же, как и для криптографической хэш-функции, то есть длина должна быть не менее 160--256 бит. На практике часто используют усечённые имитовставки.
+Требования к длине кода аутентификации в общем случае такие же, как и для криптографической хеш-функции, то есть длина должна быть не менее 160--256 бит. На практике часто используют усечённые имитовставки.
 
 Стандартные способы использования имитовставки сообщения следующие.
 \begin{itemize}
@@ -25,9 +25,9 @@
 
 Вычисление имитовставки от пакета информации $m$ с использованием блочного шифра $E$ осуществляется в виде:
     \[ \MAC(K, m) = E_K(H(m)), \]
-где $H$ -- криптографическая хэш-функция.
+где $H$ -- криптографическая хеш-функция.
 
-Имитовставка на основе хэш-функции обозначается $\HMAC$ (\langen{Hash-based MAC})\index{HMAC} и стандартно вычисляется в виде:
+Имитовставка на основе хеш-функции обозначается $\HMAC$ (\langen{Hash-based MAC})\index{HMAC} и стандартно вычисляется в виде:
     \[ \HMAC(K, m) = H(K \| H(K \| m)). \]
 
 Возможно также вычисление в виде:
@@ -44,9 +44,9 @@ $\textrm{ipad}$ -- последовательность повторяющихс
 В протоколе защищённой связи SSL/TLS\index{протокол!SSL/TLS}, используемом в интернете для инкапсуляции, в том числе, протокола HTTP\index{протокол!HTTP} в протокол HTTPS\index{протокол!HTTPS}, код $\HMAC$ определяется почти так же, как в IPsec. Отличие состоит в том, что вместо операции XOR для последовательностей $\textrm{ipad}$ и $\textrm{opad}$ осуществляется конкатенация:
     \[ \HMAC(K, m) = H((K ~\|~ \textrm{opad}) ~\|~ H((K ~\|~ \textrm{ipad}) ~\|~ m)). \]
 
-Двойное хэширование\index{двойное хэширование} с ключом в
+Двойное хеширование\index{двойное хеширование} с ключом в
     \[ \HMAC(K, m) = H(K \| H(K \| m)) \]
-применяется для защиты от атаки на расширение сообщений. Вычисление хэш-функции от сообщения $m$, состоящего из $n$ блоков $m_{1}, m_2 \dots m_n$, можно записать в виде:
+применяется для защиты от атаки на расширение сообщений. Вычисление хеш-функции от сообщения $m$, состоящего из $n$ блоков $m_{1}, m_2 \dots m_n$, можно записать в виде:
 \[\begin{array}{l}
 	m \equiv m_1 \Vert m_2 \Vert \dots \Vert m_n, \\
 	H_0 \equiv IV = \textrm{const}, \\
@@ -55,7 +55,7 @@ $\textrm{ipad}$ -- последовательность повторяющихс
 \end{array}\]
 где $f$ -- известная сжимающая функция.
 
-Пусть имитовставка использует одинарное хэширование с ключом:
+Пусть имитовставка использует одинарное хеширование с ключом:
     \[ \MAC(K, m) = H(K \| m) = H (m_0 = K \| m_1 \| m_2 \| \dots \| m_n). \]
 Тогда криптоаналитик, не зная секретного ключа, имеет возможность вычислить имитовставку для некоторого расширенного сообщения $m \| m_{n+1}$:
 \[
