--- a/public-key/el-gamal.tex
+++ b/public-key/el-gamal.tex
@@ -132,7 +132,7 @@
 
 Для создания подписи $S(m)$ пользователь $A$ выполняет следующие операции:
 \begin{itemize}
-    \item вычисляет значение криптографической хэш-функции $h(m) \in [0,p-2]$ от своего открытого сообщения $m$;
+    \item вычисляет значение криптографической хеш-функции $h(m) \in [0,p-2]$ от своего открытого сообщения $m$;
     \item выбирает случайное число $r: ~ \gcd(r, p-1)=1$;
     \item используя закрытый ключ, вычисляет:
         \[ \begin{array}{l}
@@ -146,7 +146,7 @@
 
 Получив сообщение, $B$ осуществляет проверку подписи, выполняя следующие операции:
 \begin{itemize}
-    \item по известному сообщению $m$ вычисляет значение хэш-функции $h(m)$;
+    \item по известному сообщению $m$ вычисляет значение хеш-функции $h(m)$;
     \item вычисляет:
         \[ \begin{array}{l}
             f_1 = g^{h(m)} \mod p, \\
@@ -193,7 +193,7 @@
         \end{enumerate}
     \item Подписание.
         \begin{enumerate}
-            \item От сообщения $m$ вычисляется хэш $h = H(m)$. Пусть хэш $h  = 3 \in [0, p-2]$.
+            \item От сообщения $m$ вычисляется хеш $h = H(m)$. Пусть хеш $h  = 3 \in [0, p-2]$.
             \item Выберем случайное $r = 9 \in [1, p-2]$: \\
                 $\gcd(r=9, p-1 = 40) = 1$.
             \item Вычислим
@@ -209,7 +209,7 @@
         \end{enumerate}
     \item Проверка подписи.
         \begin{enumerate}
-            \item Для полученного сообщения находится хэш $h = H(m) = 3$. Пусть полученная подпись к нему имеет вид
+            \item Для полученного сообщения находится хеш $h = H(m) = 3$. Пусть полученная подпись к нему имеет вид
                 \[ s = (a:19, b:18). \]
             \item Вычислим
                 \[ \begin{array}{ll}
